<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    
		    <TextView 
		        android:text="@string/new_memo"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:layout_marginBottom="5dp"/>
		    
		    <TextView 
		        android:text="@string/subjectlabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="5dp" />
		    
		    <EditText 
		        android:id="@+id/subject"
		        android:hint="@string/subjecthint"
		        android:background="@drawable/border"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:layout_marginLeft="5dp" />
		    
		    <TextView 
		        android:text="@string/bodylabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:layout_marginBottom="5dp" />
		    
		    <EditText 
		        android:id="@+id/body"
		        android:hint="@string/bodyhint"
		        android:gravity="top"
		        android:background="@drawable/border"
		        android:layout_width="match_parent"
		        android:layout_height="200dp" 
		        android:layout_marginRight="5dp"
		        android:layout_marginLeft="5dp" />
		    
		    <TextView 
			    android:text="@string/exec_label"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="10dp" />
		    
		    
		    <RadioGroup 
			    android:id="@+id/exec_group"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
			            
			    <RadioButton 
			       android:id="@+id/save"
			       android:text="@string/save"
			       android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       android:layout_marginRight="20dp" />
			            
			    <RadioButton 
			       android:id="@+id/email"
			       android:text="@string/email"
			       android:layout_width="wrap_content"
			       android:layout_height="wrap_content" />
			</RadioGroup>
			
		    <TextView
		        android:id="@+id/sendto_label"
		        android:text="@string/sendto_label"
		        android:visibility="gone"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="5dp"  />
		    
		    <EditText 
		        android:id="@+id/sendto"
		        android:hint="@string/sendto_hint"
		        android:visibility="gone"
		        android:background="@drawable/border"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:layout_marginLeft="5dp" />
		    
		    <LinearLayout 
		        android:orientation="horizontal"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" >
		    
		    <Button 
		        android:id="@+id/savebutton"
		        android:text="@string/savelabel"
		        android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp" />
		    
		    <Button 
		        android:id="@+id/closebutton"
		        android:text="@string/closelabel"
		        android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp" />
		    
		    </LinearLayout>	    
		</LinearLayout>
</ScrollView>